--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<header id="header">
 				<h1>Astronomy Camp</h1>
 				<p>for Gandaki Porovince School<br />
-				Students and Teachers<a href="http://html5up.net">HTML5 UP</a>.</p>
+				Students and Teachers</p>
 			</header>
 
 
