--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<h21><The First PAS ></h21>
-							<h1>< Astronomy Camp></h1>
+							<h21>The First PAS </h21>
+							<h1> Astronomy Camp </h1>
 							<p> For the School Students and Teachers from Gandaki Province </p>
 						</div>
 
