--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
 								<li>
-									<a href="#">Rationale</a>
+									<a href="#">Introduction</a>
 									<ul>
 										<li><a href="#">Lorem ipsum</a></li>
 										<li><a href="#">Magna veroeros</a></li>
@@ -57,7 +57,7 @@
 
 			<!-- Intro -->
 				<section id="intro" class="wrapper style1">
-					<div class="title">The Introduction</div>
+					<div class="title">INTRODUCTION</div>
 					<div class="container">
 						<p class="style1">
 						Three Days Hands-on activities are designed by the Pokhara Astronomical Society (PAS) to 
