--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 								<li><a href="left-sidebar.html">Program</a></li>
 								<li><a href="left-sidebar.html">Org. Committee</a></li>
 								<li><a href="right-sidebar.html">Venue</a></li>
-								<li><a href="no-sidebar.html">Contact Us </a></li>
+								<li><a href="left-sidebar.html">Contact Us </a></li>
 							</ul>
 						</nav>
 
