--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 									<a href="#">Introduction</a>
 									
 								</li>
-								<li><a href="left-sidebar.html"> Registration</a></li>
-								<li><a href="left-sidebar.html">Program</a></li>
-								<li><a href="left-sidebar.html">Org. Committee</a></li>
-								<li><a href="right-sidebar.html">Venue</a></li>
-								<li><a href="left-sidebar.html">Contact Us </a></li>
+								<li><a href="registration.html"> Registration</a></li>
+								<li><a href="program.html">Program</a></li>
+								<li><a href="soc_loc.html">Org. Committee</a></li>
+								<li><a href="venue.html">Venue</a></li>
+								<li><a href="contact.html">Contact Us </a></li>
 							</ul>
 						</nav>
 
