--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
 
 			<!-- Main -->
 				<section id="main" class="wrapper style2">
-					<div class="title">Venue</div>
+					<div class="title">Contact Us</div>
 					
 					<div class="container">
 						<div class="row gtr-150">
