--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 						</div>
 						<div id="copyright">
 							<ul>
-								<li>&copy; PAS</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; PAS</li> <li> Image Credit: NASA/ESA & Wallpaperaccess </li>  <li> Design: HTML5 UP</li>
 							</ul>
 						</div>
 					</div>
