--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
 			<!-- Highlights -->
 				<section id="highlights" class="wrapper style3">
-					<div class="title">    Orgnizers</div>
+					<div class="title">    Organizer</div>
 					<div class="container">
 						<div class="row aln-center">
 							<div class="col-4 col-12-medium">
