--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 												<section>
 													<h3 class="icon solid fa-home">Mailing Address</h3>
 													<p>
-														Pokhara Astronomical Society Corp<br />
+														Pokhara Astronomical Society<br />
 														Pokhara, Nepal
 													</p>
 												</section>
