--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<div id="logo">
 							<h21>The First PAS </h21>
 							<h1> Astronomy Camp </h1>
-							<p> For the School Students and Teachers from Gandaki Province </p>
+							<p> For the School Students and Teachers </p>
 						</div>
 
 					<!-- Nav -->
