--- a/venue.html
+++ b/venue.html
@@ -27,7 +27,13 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="index.html">BACK</a></li>
+								<li ><a href="index.html">Home</a></li>
+								<li><a href="#">Introduction</a></li>
+								<li><a href="registration.html"> Registration</a></li>
+								<li><a href="program.html">Program</a></li>
+								<li><a href="soc_loc.html">Org. Committee</a></li>
+								<liclass="current"><a href="venue.html">Venue</a></li>
+								<li><a href="contact.html">Contact Us </a></li>
 							</ul>
 						</nav>
 
