--- a/program.html
+++ b/program.html
@@ -26,14 +26,11 @@
 
 					<!-- Nav -->
 						<nav id="nav">
+						
 							<ul>
-							<li ><a href="index.html">Home</a></li>
-								<li><a href="index.html">Introduction</a></li>
-								<li><a href="registration.html"> Registration</a></li>
-								<li class="current"><a href="program.html">Program</a></li>
-								<li><a href="soc_loc.html">Org. Committee</a></li>
-								<li><a href="venue.html">Venue</a></li>
+								<li><a href="index.html">BACK</a></li>
 							</ul>
+							
 						</nav>
 
 				</section>
