--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
 				<section id="header" class="wrapper">
 
 					<!-- Logo -->
+					
 						<div id="logo">
 							<h21>The First PAS </h21>
 							<h1> Astronomy Camp </h1>
-							<p><b> For the School Students and Teachers </b></p>
+							<p> For the School Students and Teachers from Gandaki Province </p>
 						</div>
 
 					<!-- Nav -->
