--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,13 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="index.html">BACK</a></li>
+								<li ><a href="index.html">Home</a></li>
+								<li><a href="index.html">Introduction</a></li>
+								<li><a href="registration.html"> Registration</a></li>
+								<li><a href="program.html">Program</a></li>
+								<li><a href="soc_loc.html">Org. Committee</a></li>
+								<li class="current"><a href="contact.html">Contact us</a></li>
+							
 							</ul>
 						</nav>
 
