--- a/venue.html
+++ b/venue.html
@@ -26,14 +26,17 @@
 
 					<!-- Nav -->
 						<nav id="nav">
-							<ul>
-								<li ><a href="index.html">Home</a></li>
-								<li><a href="index.html">Introduction</a></li>
+                                                                 <ul>
+								<li> <a href="index.html">Home</a></li>
+								<li>
+									<a href="index.html">Introduction</a>
+									
+								</li>
 								<li><a href="registration.html"> Registration</a></li>
 								<li><a href="program.html">Program</a></li>
 								<li><a href="soc_loc.html">Org. Committee</a></li>
 								<li class="current"><a href="venue.html">Venue</a></li>
-							
+								<li><a href="contact.html">Contact Us </a></li>
 							</ul>
 						</nav>
 
