--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 										</div>
 										<div class="col-6 col-12-medium">
 											<section>
-												<h3 class="icon fa-image">Hands-on sessions</h3>
+												<h3 class="icon material-icons"">Hands-on sessions</h3>
 												<p> ... </p>
 											</section>
 										</div>
