--- a/index.html
+++ b/index.html
@@ -91,37 +91,44 @@
 										<div class="col-6 col-12-medium">
 											<section>
 												<h3 class="icon fa-comment">Astronomy talks, Discussions and Q/A Sessions</h3>
-												<p>...</p>
+												<p>.<li>Introduction to Astronomy, Solar System, Star formation, Substrcture of the Milky Way Galaxy.</li>
+												<li> Introdution to space and ground based telescope. </li> 
+												</p>
+												
 											</section>
 										</div>
 										<div class="col-6 col-12-medium">
 											<section>
 												<h3 class="icon solid fa-sync"> Astronomy Softwares and mobile applications</h3>
-												<p>...</p>
+												<p> <li>Stellarium </li>
+												<li> GaiaSky </li>
+											            </p>
 											</section>
 										</div>
 										<div class="col-6 col-12-medium">
 											<section>
 												<h3 class="icon material-icons"">Hands-on sessions</h3>
-												<p> ... </p>
+												<p> <li>Group project about telescope and water rocket building </li> 
+												<li> Python basic projects (Data Reduction and Visualization) </li>															
+																</p>
 											</section>
 										</div>
 										<div class="col-6 col-12-medium">
 											<section>
 												<h3 class="icon solid fa-cog">Water Rocket workshop and launching </h3>
-												<p>    ......</p>
+												
 											</section>
 										</div>
 										<div class="col-6 col-12-medium">
 											<section>
 												<h3 class="icon solid fa-wrench">Telescope Operation </h3>
-												<p>...</p>
+												<p>Observation techniques</p>
 											</section>
 										</div>
 										<div class="col-6 col-12-medium">
 											<section>
 												<h3 class="icon solid mdi:telescope"> Solar & Lunar and Night Sky Observation </h3>
-												<p>...</p>
+												<p>Night sky party</p>
 											</section>
 										</div>
 									</div>
