--- a/soc_loc.html
+++ b/soc_loc.html
@@ -19,7 +19,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<h21>The First PAS </h21>
+							<h21>THE FIRST PAS </h21>
 							<h1> Astronomy Camp </h1>
 							<p> For the School Students and Teachers from Gandaki Province </p>
 						</div>
