--- a/soc_loc.html
+++ b/soc_loc.html
@@ -76,7 +76,7 @@
 												<li> Raj K. Dhakal </li>
 												<li> Mahesh Thakuri (Chair) </li>
 												<li> Sudip V. Adhikari </li>
-												<li> Raj K. Pradhan </li>											
+												<li> Raj K. Pradhan (Co-Chair)</li>											
 											</ul>
 										</section>
 									</div>
