--- a/soc_loc.html
+++ b/soc_loc.html
@@ -44,7 +44,7 @@
 
 			<!-- Main -->
 				<section id="main" class="wrapper style2">
-					<div class="title">Venue</div>
+					<div class="title">Organizing Committee</div>
 					
 					<div class="container">
 						<div class="row gtr-150">
@@ -62,6 +62,8 @@
 												<li>Sabin Gautam (Co-Chair)  </li>
 												<li>Bhairab Ale</li>
 												<li>Sujan Dahal</li>
+												<li> Pratikshya Sedhai </li>
+												<li> Angel Bashyal </li>
 																								
 											</ul>
 											<a href="#" class="button style1">Archives</a>
@@ -72,7 +74,8 @@
 											</header>
 											<ul class="style3">
 												<li> Dr. Tek P. Adhikari </li>
-												<li> Dhaka R. Bhandari </li>
+												<li> Dr. Dhaka R. Bhandari </li>
+												<li> Dr. Sudeep Neupane </li>
 												<li> Raj K. Dhakal </li>
 												<li> Mahesh Thakuri (Chair) </li>
 												<li> Sudip V. Adhikari </li>
