--- a/venue.html
+++ b/venue.html
@@ -44,7 +44,7 @@
 
 			<!-- Main -->
 				<section id="main" class="wrapper style2">
-					<div class="title">Venue</div>
+					<div class="title">Organizing Committee</div>
 					
 					<div class="container">
 						<div class="row gtr-150">
@@ -58,10 +58,12 @@
 												<h2>LOC</h2>
 											</header>
 											<ul class="style3">
+												<li>Sabin Gautam (Co-Chair)  </li>												
 												<li> Nishan Lamichhane (Chair)</li>
-												<li>Sabin Gautam (Co-Chair)  </li>
 												<li>Bhairab Ale</li>
 												<li>Sujan Dahal</li>
+												<li> Pratikshya Sedhai </li>
+												<li> Angel Bashyal </li>
 																								
 											</ul>
 											<a href="#" class="button style1">Archives</a>
@@ -72,11 +74,12 @@
 											</header>
 											<ul class="style3">
 												<li> Dr. Tek P. Adhikari </li>
-												<li> Dhaka R. Bhandari </li>
+												<li> Dr. Dhaka R. Bhandari </li>
+												<li> Dr. Sudeep Neupane </li>
 												<li> Raj K. Dhakal </li>
 												<li> Mahesh Thakuri (Chair) </li>
 												<li> Sudip V. Adhikari </li>
-												<li> Raj K. Pradhan </li>											
+												<li> Raj K. Pradhan (Co-Chair)</li>											
 											</ul>
 										</section>
 									</div>
@@ -88,7 +91,6 @@
 						</div>
 					</div>
 				</section>
-
 			<!-- Highlights -->
 			<!-- Footer -->
 				<section id="footer" class="wrapper">
