--- a/venue.html
+++ b/venue.html
@@ -33,7 +33,7 @@
 									
 								</li>
 								<li><a href="registration.html"> Registration</a></li>
-								<li><a href="program.html">Program</a></li>
+								<li><a href="program.html">Participants</a></li>
 								<li><a href="soc_loc.html">Org. Committee</a></li>
 								<li class="current"><a href="venue.html">Venue</a></li>
 								<li><a href="contact.html">Contact Us </a></li>
