--- a/program.html
+++ b/program.html
@@ -31,7 +31,7 @@
 								<li ><a href="index.html">Home</a></li>
 								<li><a href="index.html">Introduction</a></li>
 								<li><a href="registration.html"> Registration</a></li>
-								<li class="current"><a href="program.html">Program</a></li>
+								<li class="current"><a href="program.html">Participants</a></li>
 								<li><a href="soc_loc.html">Org. Committee</a></li>
 								<li ><a href="venue.html">Venue</a></li>
 							
