--- a/registration.html
+++ b/registration.html
@@ -35,7 +35,7 @@
 
 			<!-- Main -->
 				<section id="main" class="wrapper style2">
-					<div class="title">Organizing Committee</div>
+					<div class="title">Registration</div>
 					
 					<div class="container">
 						<div class="row gtr-150">
