--- a/registration.html
+++ b/registration.html
@@ -26,8 +26,17 @@
 
 					<!-- Nav -->
 						<nav id="nav">
-							<ul>
-								<li><a href="index.html">BACK</a></li>
+							 <ul>
+								<li <a href="index.html">Home</a></li>
+								<li>
+									<a href="#">Introduction</a>
+									
+								</li>
+								<li class="current"><a href="registration.html"> Registration</a></li>
+								<li><a href="program.html">Participants</a></li>
+								<li><a href="soc_loc.html">Org. Committee</a></li>
+								<li><a href="venue.html">Venue</a></li>
+								<li><a href="contact.html">Contact Us </a></li>
 							</ul>
 						</nav>
 
