--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 							<h21>THE FIRST PAS</h21>
 							<h1> Astronomy Camp </h1>
 							<p> For the School Students and Teachers from Gandaki Province </p>
+							<h2> 19-21, October 2022 </h2>
+							<h12> Pokhara, Kaski, Nepal</h12>
 						</div>
 
 					<!-- Nav -->
