--- a/soc_loc.html
+++ b/soc_loc.html
@@ -85,7 +85,49 @@
 									</div>
 
 							</div>
-
+                                                        <div class="col-8 col-12-medium imp-medium">  
+							<!-- Content -->
+									<div id="content">
+										<article class="box post">
+											<header class="style1">
+												<h2>Lorem ipsum dolor sit amet magna egestas morbi bibendum sed malesuada</h2>
+												<p>Tempus feugiat veroeros sed nullam dolore</p>
+											</header>
+											<a href="#" class="image featured">
+												<img src="images/pic01.jpg" alt="" />
+											</a>
+											<p>Fringilla nisl. .....rajdfkjkadjflksddklsfjsdkljfsdklsdkl
+											
+											
+											</p>
+										</article>
+										<div class="row gtr-150">
+											<div class="col-6 col-12-small">
+												<section class="box">
+													<header>
+														<h2>Magna pulvinar tempus</h2>
+													</header>
+													<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+													<p>Rutrum bibendum. Proin pellentesque diam non ligula commodo tempor. Vivamus
+													eget urna nibh. Curabitur non fringilla nisl. Donec accumsan interdum nisi, quis
+													tempus.</p>
+													<a href="#" class="button style1">More</a>
+												</section>
+											</div>
+											<div class="col-6 col-12-small">
+												<section class="box">
+													<header>
+														<h2>Magna pulvinar tempus</h2>
+													</header>
+													<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+													<p>Rutrum bibendum. Proin pellentesque diam non ligula commodo tempor. Vivamus
+													eget urna nibh. Curabitur non fringilla nisl. Donec accumsan interdum nisi, quis
+													tempus.</p>
+													<a href="#" class="button style1">More</a>
+												</section>
+											</div>
+										</div>
+									</div>
 
 							</div>
 						</div>
