--- a/soc_loc.html
+++ b/soc_loc.html
@@ -90,16 +90,27 @@
 									<div id="content">
 										<article class="box post">
 											<header class="style1">
-												<h2>Lorem ipsum dolor sit amet magna egestas morbi bibendum sed malesuada</h2>
-												<p>Tempus feugiat veroeros sed nullam dolore</p>
+												<h2>Scientific Organizing Committee</h2>
+												<p><li> Dr. Tek P. Adhikari </li>
+												<li> Dr. Dhaka R. Bhandari </li>
+												<li> Dr. Sudeep Neupane </li>
+												<li> Raj K. Dhakal </li>
+												<li> Mahesh Thakuri (Chair) </li>
+												<li> Sudip V. Adhikari </li>
+												<li> Raj K. Pradhan (Co-Chair)</li>	  </p>
 											</header>
-											<a href="#" class="image featured">
-												<img src="images/pic01.jpg" alt="" />
-											</a>
-											<p>Fringilla nisl. .....rajdfkjkadjflksddklsfjsdkljfsdklsdkl
 											
+											<header class="style1">
+												<h2>Scientific Organizing Committee</h2>
+												<p>
+												<li>Sabin Gautam (Co-Chair)  </li>												
+												<li> Nishan Lamichhane (Chair)</li>
+												<li>Bhairab Ale</li>
+												<li>Sujan Dahal</li>
+												<li> Pratikshya Sedhai </li>
+												<li> Angel Bashyal </li>	  </p>
+											</header>
 											
-											</p>
 										</article>
 										<div class="row gtr-150">
 											<div class="col-6 col-12-small">
