--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					<div class="title">INTRODUCTION</div>
 					<div class="container">
 						<p class="style1">
-						This three days residential Astronomy Camp are designed by the Pokhara Astronomical Society (PAS) to enhance
+						This three days residential Astronomy Camp is designed by the Pokhara Astronomical Society (PAS) to enhance
 							the high school student’s understanding of astronomy and space science with a practical approach.
 							The objective of the workshop is to bring skill sets and practical knowledge to students and teachers
 							during classroom teaching activities. This workshop is an international standard and will run smoothly as per the schedule.
