--- a/venue.html
+++ b/venue.html
@@ -44,8 +44,8 @@
 
 			<!-- Main -->
 				<section id="main" class="wrapper style2">
-					<div class="title">Organizing Committee</div>
-					
+					<div class="title">Venue</div>
+					<p>............... </p>
 					<div class="container">
 						<div class="row gtr-150">
 							<div class="col-4 col-12-medium">
