--- a/soc_loc.html
+++ b/soc_loc.html
@@ -27,7 +27,7 @@
 					<!-- Nav -->
 						<nav id="nav">
 							 <ul>
-								<li <a href="index.html">Home</a></li>
+								<li> <a href="index.html">Home</a></li>
 								<li>
 									<a href="#">Introduction</a>
 									
@@ -55,7 +55,7 @@
 										
 										<section class="box">
 										<header>
-												<h2></h2>
+												<h2> </h2>
 											</header>
 											<ul class="style2">
 												<li>
@@ -68,7 +68,7 @@
 												<li>
 													<article class="box post-excerpt">
 														<a href="#" class="image left"><img src="images/pic2.jpg" alt="" /></a>
-														<h3><a href="#">S</a></h3>
+														<h3><a href="#"> </a></h3>
 														<p></p>
 													</article>
 												</li>
