--- a/venue.html
+++ b/venue.html
@@ -56,7 +56,7 @@
 										<section class="box">
 										<header>
 												<h2> The location </h2>
-												<p> The program will be held at the Regional Agricultural Research Station (RARS), Lumle, Pokhara, Nepal. RARS, Lumle is a western regional wing under the Nepal Government's Nepal Agricultural Research Council. It is located 31.7 km northwest of Pokhara. It takes around an hour to get there by bus.</p> 
+												<p> The program will be held at the <b>Regional Agricultural Research Station (RARS) </b>, Lumle, Pokhara, Nepal. RARS, Lumle is a western regional wing under the Nepal Government's Nepal Agricultural Research Council. It is located 31.7 km northwest of Pokhara. It takes around an hour to get there by bus.</p> 
 											</header>
 											<ul class="style2">
 												<li>
