--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							<h21>THE FIRST PAS</h21>
 							<h1> Astronomy Camp </h1>
 							<p> For the School Students and Teachers from Gandaki Province </p>
-							<h21> 19-21, October 2022 </h21>
+							<h21> 19-21, October 2022 </h21><br> 
 							<h21> Pokhara, Kaski, Nepal</h21>
 						</div>
 
