--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<div id="logo">
 							<h21>THE FIRST PAS</h21>
 							<h1> Astronomy Camp </h1>
-							<p> For the School Students and Teachers from Gandaki Province </p>
+							<p> <b> For the School Students and Teachers from Gandaki Province </b> </p>
 							<h21> 19-21, October 2022 </h21><br> 
 							<h21> Pokhara, Kaski, Nepal</h21>
 						</div>
