--- a/venue.html
+++ b/venue.html
@@ -44,7 +44,7 @@
 
 			<!-- Main -->
 				<section id="main" class="wrapper style2">
-					<div class="title">Vaneu</div>
+					<div class="title">Veneu</div>
 					
 					<div class="container">
 						<div class="row gtr-150">
