--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 										</div>
 										<div class="col-6 col-12-medium">
 											<section>
-												<h3 class="icon material-icons"">Hands-on sessions</h3>
+												<h3 class="icon solid fa-sync"">Hands-on sessions</h3>
 												<p> <li>Group project about telescope and water rocket building </li> 
 												<li> Python basic projects (Data Reduction and Visualization) </li>															
 																</p>
@@ -110,7 +110,9 @@
 										<div class="col-6 col-12-medium">
 											<section>
 												<h3 class="icon solid fa-cog">Water Rocket workshop and launching </h3>
-												
+												<p> <li>Theory</li> 
+												<li> Practical </li>															
+												</p>
 											</section>
 										</div>
 										<div class="col-6 col-12-medium">
