--- a/index.html
+++ b/index.html
@@ -313,6 +313,12 @@
 													<h3 class="icon solid fa-envelope">Email</h3>
 													<p>
 														<a href="#">pastrosociety@gmail.com</a>
+											<meta name="viewport" content="width=device-width, initial-scale=1">
+											<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+										    <i class="fa fa-twitter" style="font-size:24px"></i>
+										   <p><a href="">@PAS_OFFICE</a> </p>
+<br>
+
 													</p>
 												</section>
 											</div>
