--- a/registration.html
+++ b/registration.html
@@ -1,8 +1,5 @@
 <!DOCTYPE HTML>
 <!--
-	Escape Velocity by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
 	<head>
@@ -153,7 +150,7 @@
 												<section>
 													<h3 class="icon solid fa-home">Mailing Address</h3>
 													<p>
-														Pokhara Astronomical Society Corp<br />
+														Pokhara Astronomical Society <br />
 														Pokhara, Nepal
 													</p>
 												</section>
@@ -189,7 +186,7 @@
 						</div>
 						<div id="copyright">
 							<ul>
-								<li>&copy; PAS</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; PAS</li><li>Design: <a href="#">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</div>
