--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
 								<li>
-									<a href="#">Introduction</a>
+									<a href="#intro">Introduction</a>
 									
 								</li>
 								<li><a href="registration.html"> Registration</a></li>
-								<li><a href="program.html">Program</a></li>
+								<li><a href="program.html">Participants</a></li>
 								<li><a href="soc_loc.html">Org. Committee</a></li>
 								<li><a href="venue.html">Venue</a></li>
 								<li><a href="contact.html">Contact Us </a></li>
