--- a/registration.html
+++ b/registration.html
@@ -22,9 +22,9 @@
 					<!-- Nav -->
 						<nav id="nav">
 							 <ul>
-								<li <a href="index.html">Home</a></li>
+								<li>  <a href="index.html">Home</a></li>
 								<li>
-									<a href="index.html">Introduction</a>
+									<a href="#intro">Introduction</a>
 									
 								</li>
 								<li class="current"><a href="registration.html"> Registration</a></li>
