--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,7 @@
 								<li><a href="registration.html"> Registration</a></li>
 								<li><a href="program.html">Program</a></li>
 								<li><a href="soc_loc.html">Org. Committee</a></li>
+								<li><a href="venue.html">Venue</a></li>
 								<li class="current"><a href="contact.html">Contact us</a></li>
 							
 							</ul>
