--- a/registration.html
+++ b/registration.html
@@ -24,7 +24,7 @@
 							 <ul>
 								<li>  <a href="index.html">Home</a></li>
 								<li>
-									<a href="#intro">Introduction</a>
+									<a href="index.html">Introduction</a>
 									
 								</li>
 								<li class="current"><a href="registration.html"> Registration</a></li>
