--- a/registration.html
+++ b/registration.html
@@ -22,7 +22,7 @@
 					<!-- Nav -->
 						<nav id="nav">
 							 <ul>
-								<li>  <a href="index.html">Home</a></li>
+								<li <a href="index.html">Home</a></li>
 								<li>
 									<a href="index.html">Introduction</a>
 									
