--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
 								<li>
-									<a href="#intro">Introduction</a>
+									<a href="#">Introduction</a>
 									
 								</li>
 								<li><a href="registration.html"> Registration</a></li>
