--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 						<!-- Image -->
 							<a href="#" class="image featured">
-								<img src="images/pic01.jpg" alt="" />
+								<img src="images/front_1.png" alt="" />
 							</a>
 
 						<!-- Features -->
