--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 								<li><a href="registration.html"> Registration</a></li>
 								<li><a href="program.html">Participants</a></li>
 								<li><a href="soc_loc.html">Org. Committee</a></li>
+								<li><a href="soc_loc.html">Org. Committee</a></li>
 								<li><a href="venue.html">Venue</a></li>
 								<li><a href="contact.html">Contact Us </a></li>
 							</ul>
